Fix app nav dropdowns causing backdrop filter blurring when closed

--- a/style/component/AppNav.scss
+++ b/style/component/AppNav.scss
@@ -193,6 +193,12 @@
 			}
 
 			@mixin hidden($selector) {
+				&:not(:hover, #{unquote($selector)}) {
+					&::before {
+						backdrop-filter: none;
+					}
+				}
+				
 				&:not(:hover, #{unquote($selector)}) .app-nav-destination:not(.active, :first-child),
 				&:not(:hover, #{unquote($selector)}).app-nav-destination-child-active
 					.app-nav-destination:first-child:not(.active) {
